data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2137.wast
;; 8. **Test Description**: Implement a `block` containing a misconfigured `br_table` that cycles between block and loop endlessly without correct error detection.    - **Constraint**: Verifies `br_table` logic within a block to prevent potential cyclic behaviour.

(assert_invalid
  (module
    (func (block (result i32) 
      (loop (br_table 0 1) (br 0))
    ))
  )
  "type mismatch"
)